Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -297,6 +297,10 @@ Error message and password prompt
 
 <li>$:/config/RelinkOnRename</li>
 
+<li>$:/config/TopLeftBar/Button/$:/themes/jd/Mono/Buttons/searchbar</li>
+
+<li>$:/config/TopRightBar/$:/themes/jd/Mono/TopBarSegments/search</li>
+
 <li>$:/config/ViewToolbarButtons/Visibility/$:/.giffmex/ViewToolbar/viewrefscheckboxes</li>
 
 <li>$:/core</li>
@@ -383,7 +387,11 @@ Error message and password prompt
 
 <li>$:/state/plugin-info-896098052-$:/plugins/tiddlywiki/markdown--436478829</li>
 
+<li>$:/state/searchbar</li>
+
 <li>$:/state/showeditpreview</li>
+
+<li>$:/state/styled-frames</li>
 
 <li>$:/state/tab--1190666861</li>
 
@@ -1148,8 +1156,8 @@ placeholder=&quot;$placeholder$&quot;/&gt;
 <div created="20191215203357897" modified="20200304195543050" tags="tb" title="$:/config/EditorTypeMappings/text/vnd.tiddlywiki">
 <pre>comptext</pre>
 </div>
-<div created="20190202142826323" creator="jd" modified="20190203153504860" modifier="jd" title="$:/config/EmptyStoryMessage">
-<pre>{{$:/themes/jd/Mono/EmptyStoryMessage}}</pre>
+<div created="20190202142826323" creator="jd" modified="20200728022732169" modifier="debby" title="$:/config/EmptyStoryMessage">
+<pre></pre>
 </div>
 <div created="20191225174624729" modified="20200304195553439" tags="tb" title="$:/config/NewJournal/Title">
 <pre>YYYY-0MM / 0DD / 0hh:0mm:0ss /</pre>
@@ -1181,14 +1189,20 @@ placeholder=&quot;$placeholder$&quot;/&gt;
 <div created="20200728015919374" creator="debby" modified="20200728020511670" modifier="debby" title="$:/config/Plugins/Disabled/$:/themes/jd/Mono">
 <pre>no</pre>
 </div>
-<div created="20200728022017838" creator="debby" modified="20200728022359870" modifier="debby" title="$:/config/Plugins/Disabled/$:/themes/tiddlywiki/snowwhite">
-<pre>no</pre>
+<div created="20200728022017838" creator="debby" modified="20200728022017838" modifier="debby" title="$:/config/Plugins/Disabled/$:/themes/tiddlywiki/snowwhite">
+<pre>yes</pre>
 </div>
-<div created="20200728015926979" creator="debby" modified="20200728022333313" modifier="debby" title="$:/config/Plugins/Disabled/$:/themes/tiddlywiki/vanilla">
+<div created="20200728015926979" creator="debby" modified="20200728022106490" modifier="debby" title="$:/config/Plugins/Disabled/$:/themes/tiddlywiki/vanilla">
 <pre>no</pre>
 </div>
 <div created="20200106214031452" modified="20200304195600676" tags="tb" title="$:/config/RelinkOnRename">
 <pre>yes</pre>
+</div>
+<div created="20200728022633027" creator="debby" modified="20200728022633027" modifier="debby" title="$:/config/TopLeftBar/Button/$:/themes/jd/Mono/Buttons/searchbar">
+<pre>hide</pre>
+</div>
+<div created="20200728022633023" creator="debby" modified="20200728022633023" modifier="debby" title="$:/config/TopRightBar/$:/themes/jd/Mono/TopBarSegments/search">
+<pre>hide</pre>
 </div>
 <div created="20200210145131741" modified="20200304195613549" tags="tb" title="$:/config/ViewToolbarButtons/Visibility/$:/.giffmex/ViewToolbar/viewrefscheckboxes">
 <pre>hide</pre>
@@ -12571,8 +12585,14 @@ html body.tc-body {
 <div created="20200722080910683" creator="debby" modified="20200722080940458" modifier="debby" title="$:/state/plugin-info-896098052-$:/plugins/tiddlywiki/markdown--436478829">
 <pre>usage</pre>
 </div>
+<div created="20200728022633025" creator="debby" modified="20200728022633025" modifier="debby" title="$:/state/searchbar">
+<pre>show</pre>
+</div>
 <div created="20200618095006136" creator="debby" modified="20200619033242312" modifier="debby" title="$:/state/showeditpreview">
 <pre>no</pre>
+</div>
+<div created="20200728022644346" creator="debby" modified="20200728022647426" modifier="debby" title="$:/state/styled-frames">
+<pre>yes</pre>
 </div>
 <div created="20200618094158079" creator="debby" modified="20200618094206143" modifier="debby" title="$:/state/tab--1190666861">
 <pre>TiddlyBlink</pre>
@@ -12580,7 +12600,7 @@ html body.tc-body {
 <div created="20200618095532887" creator="debby" modified="20200722135218846" modifier="debby" title="$:/state/tab--152518593">
 <pre>$:/core/ui/MoreSideBar/Plugins/Theme</pre>
 </div>
-<div created="20200618012853212" creator="debby" modified="20200728021755532" modifier="debby" title="$:/state/tab--1963855381">
+<div created="20200618012853212" creator="debby" modified="20200728022729549" modifier="debby" title="$:/state/tab--1963855381">
 <pre>$:/themes/jd/Mono/Config</pre>
 </div>
 <div created="20200527074355500" creator="debby" modified="20200722135107633" modifier="debby" title="$:/state/tab--2112689675">
@@ -12592,14 +12612,14 @@ html body.tc-body {
 <div created="20200527074400500" creator="debby" modified="20200722135101714" modifier="debby" title="$:/state/tab--959111941">
 <pre>$:/core/ui/ControlPanel/TiddlerFields</pre>
 </div>
-<div created="20200527074318200" creator="debby" modified="20200728022008003" modifier="debby" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Plugins</pre>
+<div created="20200527074318200" creator="debby" modified="20200728022719849" modifier="debby" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
 <div created="20200618012538037" creator="debby" modified="20200722134041093" modifier="debby" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/General</pre>
 </div>
-<div created="20200728021958780" creator="debby" modified="20200728022004275" modifier="debby" title="$:/state/tab-738187504">
-<pre>$:/themes/jd/Mono/Config/SidebarSegments</pre>
+<div created="20200728021958780" creator="debby" modified="20200728022610257" modifier="debby" title="$:/state/tab-738187504">
+<pre>$:/themes/jd/Mono/Config/TopbarButtons</pre>
 </div>
 <div created="20200618095525979" creator="debby" modified="20200722135209921" modifier="debby" title="$:/state/tab/moresidebar-1645249547">
 <pre>$:/core/ui/MoreSideBar/Plugins</pre>
@@ -12613,7 +12633,7 @@ html body.tc-body {
 <div created="20200618032706502" creator="ㄎ" modified="20200618032708843" modifier="debb" title="$:/status/UserName">
 <pre>debby</pre>
 </div>
-<div created="20200728022325172" creator="debby" list="" modified="20200728022325172" modifier="debby" title="$:/StoryList">
+<div list="Welcome!" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200127163609843" list="$:/jd/fullscreen-editor/EditButton $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200304200339220" tags="tb" title="$:/tags/EditToolbar">
@@ -13894,18 +13914,18 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
     }
 }</pre>
 </div>
-<div created="20190202114537700" creator="jd" list="$:/core/ui/Buttons/home $:/core/ui/Buttons/new-tiddler $:/core/ui/Buttons/control-panel $:/core/ui/Buttons/save-wiki $:/core/ui/TopBar/menu $:/themes/jd/Mono/Buttons/searchbar $:/themes/jd/Mono/Buttons/font-scroller" modified="20200728021823103" modifier="debby" tags="" title="$:/themes/jd/Mono/Database" type="application/json">
+<div created="20190202114537700" creator="jd" list="" modified="20200728022638175" modifier="debby" tags="" title="$:/themes/jd/Mono/Database" type="application/json">
 <pre>{
     &quot;grid-sticky-header-background&quot;: &quot;&lt;&lt;colour page-background&gt;&gt;&quot;,
     &quot;grid-item-background&quot;: &quot;&lt;&lt;colour background&gt;&gt;&quot;,
     &quot;grid-item-border&quot;: &quot;&lt;&lt;colour tiddler-border&gt;&gt;&quot;,
     &quot;header-background&quot;: &quot;&lt;&lt;colour page-background&gt;&gt;&quot;,
     &quot;header-position-mobile-no-searchbar&quot;: &quot;calc(2px + 2.25em)&quot;,
-    &quot;header-position-mobile-yes-searchbar&quot;: &quot;calc(4px + 3em + 6px + {{$:/themes/tiddlywiki/vanilla/metrics/fontsize}} + .25em)&quot;,
+    &quot;header-position-mobile-yes-searchbar&quot;: &quot;calc(2px + 2.25em)&quot;,
     &quot;header-position-desktop&quot;: &quot;calc(56px + .25em)&quot;,
     &quot;day-palette&quot;: &quot;$:/themes/jd/Mono/Palette/SpartanDay&quot;,
     &quot;night-palette&quot;: &quot;$:/themes/jd/Mono/Palette/SpartanNight&quot;,
-    &quot;button-fontscroller&quot;: &quot;show&quot;
+    &quot;button-fontscroller&quot;: &quot;hide&quot;
 }</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.22">
