Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -397,6 +397,8 @@ Error message and password prompt
 
 <li>$:/state/showeditpreview</li>
 
+<li>$:/state/sidebar</li>
+
 <li>$:/state/tab--1190666861</li>
 
 <li>$:/state/tab--152518593</li>
@@ -1160,8 +1162,8 @@ placeholder=&quot;$placeholder$&quot;/&gt;
 <div created="20191215203357897" modified="20200304195543050" tags="tb" title="$:/config/EditorTypeMappings/text/vnd.tiddlywiki">
 <pre>comptext</pre>
 </div>
-<div created="20190202142826323" creator="jd" modified="20190203153504860" modifier="jd" title="$:/config/EmptyStoryMessage">
-<pre>{{$:/themes/jd/Mono/EmptyStoryMessage}}</pre>
+<div created="20190202142826323" creator="jd" modified="20200728033007965" modifier="debby" title="$:/config/EmptyStoryMessage">
+<pre></pre>
 </div>
 <div created="20191225174624729" modified="20200304195553439" tags="tb" title="$:/config/NewJournal/Title">
 <pre>YYYY-0MM / 0DD / 0hh:0mm:0ss /</pre>
@@ -12604,14 +12606,17 @@ html body.tc-body {
 <div created="20200618095006136" creator="debby" modified="20200619033242312" modifier="debby" title="$:/state/showeditpreview">
 <pre>no</pre>
 </div>
+<div created="20200728032937086" creator="debby" modified="20200728032938794" modifier="debby" title="$:/state/sidebar">
+<pre>no</pre>
+</div>
 <div created="20200618094158079" creator="debby" modified="20200618094206143" modifier="debby" title="$:/state/tab--1190666861">
 <pre>TiddlyBlink</pre>
 </div>
 <div created="20200618095532887" creator="debby" modified="20200722135218846" modifier="debby" title="$:/state/tab--152518593">
 <pre>$:/core/ui/MoreSideBar/Plugins/Theme</pre>
 </div>
-<div created="20200618012853212" creator="debby" modified="20200728022958688" modifier="debby" title="$:/state/tab--1963855381">
-<pre>$:/core/ui/ControlPanel/Toolbars</pre>
+<div created="20200618012853212" creator="debby" modified="20200728032830227" modifier="debby" title="$:/state/tab--1963855381">
+<pre>$:/themes/jd/Mono/Config</pre>
 </div>
 <div created="20200527074355500" creator="debby" modified="20200728023101781" modifier="debby" title="$:/state/tab--2112689675">
 <pre>$:/core/ui/ControlPanel/Basics</pre>
@@ -12622,8 +12627,8 @@ html body.tc-body {
 <div created="20200527074400500" creator="debby" modified="20200728023100133" modifier="debby" title="$:/state/tab--959111941">
 <pre>$:/core/ui/ControlPanel/EditorTypes</pre>
 </div>
-<div created="20200527074318200" creator="debby" modified="20200728023048609" modifier="debby" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Info</pre>
+<div created="20200527074318200" creator="debby" modified="20200728032822478" modifier="debby" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
 <div created="20200618012538037" creator="debby" modified="20200722134041093" modifier="debby" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/General</pre>
@@ -12643,7 +12648,7 @@ html body.tc-body {
 <div created="20200618032706502" creator="ㄎ" modified="20200618032708843" modifier="debb" title="$:/status/UserName">
 <pre>debby</pre>
 </div>
-<div created="20200728022829170" creator="debby" list="$:/ControlPanel" modified="20200728022829170" modifier="debby" title="$:/StoryList">
+<div created="20200728032818275" creator="debby" list="" modified="20200728033004064" modifier="debby" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200127163609843" list="$:/jd/fullscreen-editor/EditButton $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200304200339220" tags="tb" title="$:/tags/EditToolbar">
@@ -13678,8 +13683,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200618015712003" modified="20200618015712003" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
 </div>
-<div created="20200618014049220" creator="debby" modified="20200728015836689" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
-<pre>Doves - Carousels</pre>
+<div created="20200618014049220" creator="debby" modified="20200728024039789" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
+<pre>From collector to creator</pre>
 </div>
 <div created="20200722081145041" creator="debby" modified="20200722081149777" modifier="debby" title="$:/temp/tobibeer/preview-2-tiddler">
 <pre>李元佳</pre>
@@ -13924,7 +13929,7 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
     }
 }</pre>
 </div>
-<div created="20190202114537700" creator="jd" list="$:/core/ui/Buttons/home $:/core/ui/Buttons/new-tiddler $:/core/ui/Buttons/control-panel $:/core/ui/Buttons/save-wiki $:/core/ui/TopBar/menu $:/themes/jd/Mono/Buttons/searchbar $:/themes/jd/Mono/Buttons/font-scroller" modified="20200728021823103" modifier="debby" tags="" title="$:/themes/jd/Mono/Database" type="application/json">
+<div created="20190202114537700" creator="jd" list="$:/core/ui/Buttons/home $:/core/ui/Buttons/new-tiddler $:/plugins/tiddlywiki/markdown/new-markdown-button $:/core/ui/Buttons/control-panel $:/core/ui/Buttons/save-wiki $:/core/ui/Buttons/new-journal $:/themes/jd/Mono/Buttons/searchbar $:/core/ui/Buttons/import $:/themes/jd/Mono/Buttons/font-scroller $:/core/ui/Buttons/export-page" modified="20200728032940611" modifier="debby" tags="" title="$:/themes/jd/Mono/Database" type="application/json">
 <pre>{
     &quot;grid-sticky-header-background&quot;: &quot;&lt;&lt;colour page-background&gt;&gt;&quot;,
     &quot;grid-item-background&quot;: &quot;&lt;&lt;colour background&gt;&gt;&quot;,
