Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -10623,10 +10623,7 @@ placeholder=&quot;$placeholder$&quot;/&gt;
 <div status="complete" title="$:/Import">
 <pre>The following tiddlers were imported:
 
-# [[$:/themes/jd/Mono]]
-# [[$:/theme]]
-# [[$:/palette]]
-# [[$:/config/EmptyStoryMessage]]</pre>
+# [[welcome.md]]</pre>
 </div>
 <div title="$:/isEncrypted">
 <pre>no</pre>
@@ -12648,7 +12645,7 @@ html body.tc-body {
 <div created="20200618032706502" creator="ㄎ" modified="20200618032708843" modifier="debb" title="$:/status/UserName">
 <pre>debby</pre>
 </div>
-<div created="20200728032818275" creator="debby" list="" modified="20200728033004064" modifier="debby" title="$:/StoryList">
+<div created="20200728032818275" creator="debby" list="$:/Import" modified="20200728033112156" modifier="debby" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200127163609843" list="$:/jd/fullscreen-editor/EditButton $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200304200339220" tags="tb" title="$:/tags/EditToolbar">
@@ -13683,8 +13680,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200618015712003" modified="20200618015712003" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
 </div>
-<div created="20200618014049220" creator="debby" modified="20200728024039789" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
-<pre>From collector to creator</pre>
+<div created="20200618014049220" creator="debby" modified="20200728033112540" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
+<pre>welcome.md</pre>
 </div>
 <div created="20200722081145041" creator="debby" modified="20200722081149777" modifier="debby" title="$:/temp/tobibeer/preview-2-tiddler">
 <pre>李元佳</pre>
