--- a/index.html
+++ b/index.html
@@ -675,6 +675,8 @@ Error message and password prompt
 
 <li>From collector to creator</li>
 
+<li>Take train tickets</li>
+
 <li>TiddlyBlink</li>
 
 <li>TiddlyBlink home</li>
@@ -12645,7 +12647,7 @@ html body.tc-body {
 <div created="20200618032706502" creator="ㄎ" modified="20200618032708843" modifier="debb" title="$:/status/UserName">
 <pre>debby</pre>
 </div>
-<div created="20200728032818275" creator="debby" list="$:/Import" modified="20200728033112156" modifier="debby" title="$:/StoryList">
+<div created="20200728033232714" creator="debby" list="[[Take train tickets]]" modified="20200728033232714" modifier="debby" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200127163609843" list="$:/jd/fullscreen-editor/EditButton $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200304200339220" tags="tb" title="$:/tags/EditToolbar">
@@ -12721,7 +12723,7 @@ html body.tc-body {
     }
 }</pre>
 </div>
-<div created="20200618015454770" creator="debby" modified="20200722080756427" modifier="debby" title="$:/temp/NewTagName">
+<div created="20200618015454770" creator="debby" modified="20200728035352507" modifier="debby" title="$:/temp/NewTagName">
 <pre></pre>
 </div>
 <div author="Paco Rivière" core-version="&gt;=5.0.0" created="20200618014535688" dependents="" description="Catalan (Spain)" icon="data:image/svg+xml,%3C%3Fxml%20version%3D%221.0%22%20encoding%3D%22UTF-8%22%3F%3E%0A%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22810%22%20height%3D%22540%22%3E%0A%3Crect%20width%3D%22810%22%20height%3D%22540%22%20fill%3D%22%23FCDD09%22%2F%3E%0A%3Cpath%20stroke%3D%22%23DA121A%22%20stroke-width%3D%2260%22%20d%3D%22M0%2C90H810m0%2C120H0m0%2C120H810m0%2C120H0%22%2F%3E%0A%3C%2Fsvg%3E" modified="20200618014535688" name="ca-ES" original-plugin-type="language" original-tags="" original-title="$:/languages/ca-ES" original-type="application/json" requires-reload="no" server-url="https://tiddlywiki.com/library/v5.1.22/index.html" tags="$:/tags/RemoteAssetInfo" title="$:/temp/RemoteAssetInfo/https://tiddlywiki.com/library/v5.1.22/index.html/$:/languages/ca-ES" type="text/vnd.tiddlywiki" version="5.1.22">
@@ -13674,7 +13676,7 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200618014537337" modified="20200618015654593" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>highlight</pre>
 </div>
-<div created="20200722081132988" creator="debby" modified="20200722090137846" modifier="debby" title="$:/temp/search">
+<div created="20200722081132988" creator="debby" modified="20200728034404282" modifier="debby" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20200618015712003" modified="20200618015712003" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
@@ -14090,6 +14092,9 @@ Due to the coronavirus pandemic, I've been stuck at the WFH situation. I could r
 - **Create.** Write original article.
 
 — via [From collector to creator • Mental Nodes](https://www.mentalnodes.com/from-collector-to-creator) </pre>
+</div>
+<div created="20200728035324301" creator="debby" modified="20200728035357042" modifier="debby" tags="task" title="Take train tickets">
+<pre></pre>
 </div>
 <div created="20200125152105770" modified="20200304194714120" tags=".sidebyside tb meta" title="TiddlyBlink">
 <pre>Welcome to TiddlyBlink! ~TiddlyBlink is an adaptation of TiddlyWiki with the goal of helping you see connections between your ideas, and move quickly from one idea to another. It was inspired by the bi-directional linking found in Roam (https://roamresearch.com/), but built with capabilities already available in ~TiddlyWiki (https://tiddlywiki.com). See my example file [ext[here|https://giffmex.org/gifts/tiddlyblinkexample.html]].&lt;br&gt;&lt;br&gt;
