--- a/index.html
+++ b/index.html
@@ -671,6 +671,8 @@ Error message and password prompt
 
 <li>Bob Dylan - Rough and Rowdy Ways</li>
 
+<li>Completed</li>
+
 <li>Doves - Carousels</li>
 
 <li>From collector to creator</li>
@@ -12649,7 +12651,7 @@ html body.tc-body {
 <div created="20200618032706502" creator="ㄎ" modified="20200618032708843" modifier="debb" title="$:/status/UserName">
 <pre>debby</pre>
 </div>
-<div created="20200728033232714" creator="debby" list="ToDo" modified="20200728033232714" modifier="debby" title="$:/StoryList">
+<div created="20200728033232714" creator="debby" list="Completed" modified="20200728033232714" modifier="debby" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200127163609843" list="$:/jd/fullscreen-editor/EditButton $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200304200339220" tags="tb" title="$:/tags/EditToolbar">
@@ -12725,7 +12727,7 @@ html body.tc-body {
     }
 }</pre>
 </div>
-<div created="20200618015454770" creator="debby" modified="20200728035352507" modifier="debby" title="$:/temp/NewTagName">
+<div created="20200618015454770" creator="debby" modified="20200728035642240" modifier="debby" title="$:/temp/NewTagName">
 <pre></pre>
 </div>
 <div author="Paco Rivière" core-version="&gt;=5.0.0" created="20200618014535688" dependents="" description="Catalan (Spain)" icon="data:image/svg+xml,%3C%3Fxml%20version%3D%221.0%22%20encoding%3D%22UTF-8%22%3F%3E%0A%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22810%22%20height%3D%22540%22%3E%0A%3Crect%20width%3D%22810%22%20height%3D%22540%22%20fill%3D%22%23FCDD09%22%2F%3E%0A%3Cpath%20stroke%3D%22%23DA121A%22%20stroke-width%3D%2260%22%20d%3D%22M0%2C90H810m0%2C120H0m0%2C120H810m0%2C120H0%22%2F%3E%0A%3C%2Fsvg%3E" modified="20200618014535688" name="ca-ES" original-plugin-type="language" original-tags="" original-title="$:/languages/ca-ES" original-type="application/json" requires-reload="no" server-url="https://tiddlywiki.com/library/v5.1.22/index.html" tags="$:/tags/RemoteAssetInfo" title="$:/temp/RemoteAssetInfo/https://tiddlywiki.com/library/v5.1.22/index.html/$:/languages/ca-ES" type="text/vnd.tiddlywiki" version="5.1.22">
@@ -14083,6 +14085,16 @@ Due to the coronavirus pandemic, I've been stuck at the WFH situation. I could r
 <div created="20200618131628910" creator="debby" modified="20200618132034647" modifier="debby" tags="[[Classic rock]]" title="Bob Dylan - Rough and Rowdy Ways">
 <pre>Bob Dylan’s albums has not intrigued me for a long time. Perhaps they never did because I don’t like how his work is overhyped here in Taiwan. However, this [[review|https://www.thelineofbestfit.com/reviews/albums/bob-dylan-remains-an-immeasurable-and-inimitable-force]] from //The Line of Best Fit// is very interesting. I also like the song titles a lot. Maybe I’ll give it a try when it’s available on Spotify.</pre>
 </div>
+<div created="20200728035611844" creator="debby" modified="20200728035650029" modifier="debby" tags="Tasks" title="Completed">
+<pre>&lt;$list filter=&quot;[!has[draft.of]tag[done]sort[created]]&quot;&gt;
+&lt;$checkbox tag=&quot;done&quot;&gt;
+ ~~&lt;$link to={{!!title}}&gt;
+&lt;$view field=&quot;created&quot; format=&quot;date&quot; template=&quot;DDD 0DD/MM/YY : hh:mm&quot;/&gt;
+ - &lt;$view field=&quot;title&quot;/&gt;
+&lt;/$link&gt;~~
+&lt;/$checkbox&gt;
+&lt;/$list&gt;</pre>
+</div>
 <div created="20200619021609824" creator="debby" modified="20200619021658111" modifier="debby" tags="Britpop" title="Doves - Carousels">
 <pre>&lt;iframe width=&quot;560&quot; height=&quot;315&quot; src=&quot;https://www.youtube.com/embed/9a239ZI3iYI&quot; frameborder=&quot;0&quot; allow=&quot;accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture&quot; allowfullscreen&gt;&lt;/iframe&gt;</pre>
 </div>
@@ -14095,7 +14107,7 @@ Due to the coronavirus pandemic, I've been stuck at the WFH situation. I could r
 
 — via [From collector to creator • Mental Nodes](https://www.mentalnodes.com/from-collector-to-creator) </pre>
 </div>
-<div created="20200728035324301" creator="debby" modified="20200728035357042" modifier="debby" tags="task" title="Take train tickets">
+<div created="20200728035324301" creator="debby" modified="20200728035608240" modifier="debby" tags="task done" title="Take train tickets">
 <pre></pre>
 </div>
 <div created="20200125152105770" modified="20200304194714120" tags=".sidebyside tb meta" title="TiddlyBlink">
@@ -14120,15 +14132,14 @@ Below each tiddler (note card) is a list of links to any other tiddlers that lin
 <div created="20200128030902225" creator="debby" modified="20200618093204659" modifier="debby" tags="tb meta" title="TiddlyBlink home">
 <pre>&lt;&lt;tabs &quot;TiddlyBlink .topicList .sourcesList .hideList&quot; &quot;TiddlyBlink&quot; &gt;&gt;</pre>
 </div>
-<div created="20200728035407300" creator="debby" modified="20200728035500949" modifier="debby" tags="" title="ToDo">
-<pre>&lt;$list filter=&quot;[tag[task]]&quot;&gt;
-&lt;$view field=&quot;title&quot;/&gt;
-&lt;/$list&gt;
-&lt;$list filter=&quot;[!has[draft.of]tag[task]]&quot;&gt;
-&lt;$view field=&quot;title&quot;/&gt;
-&lt;/$list&gt;
-&lt;$list filter=&quot;[!has[draft.of]tag[task]!tag[done]sort[created]]&quot;&gt;
-&lt;$view field=&quot;title&quot;/&gt;
+<div created="20200728035407300" creator="debby" modified="20200728035543467" modifier="debby" tags="" title="ToDo">
+<pre>&lt;$list filter=&quot;[!has[draft.of]tag[task]!tag[done]sort[created]]&quot;&gt;
+&lt;$checkbox tag=&quot;done&quot;&gt;
+ &lt;$link to={{!!title}}&gt;
+&lt;$view field=&quot;created&quot; format=&quot;date&quot; template=&quot;DDD 0DD/MM/YY : hh:mm&quot;/&gt;
+ - &lt;$view field=&quot;title&quot;/&gt;
+&lt;/$link&gt;
+&lt;/$checkbox&gt;
 &lt;/$list&gt;</pre>
 </div>
 <div created="20200618101519264" creator="debby" modified="20200618101734494" modifier="debby" tags="" title="Welcome!">
