Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -659,6 +659,10 @@ Error message and password prompt
 
 <li>$:/themes/tiddlywiki/vanilla</li>
 
+<li>$:/themes/tiddlywiki/vanilla/metrics/bodyfontsize</li>
+
+<li>$:/themes/tiddlywiki/vanilla/metrics/bodylineheight</li>
+
 <li>$:/themes/tiddlywiki/vanilla/metrics/fontsize</li>
 
 <li>$:/themes/tiddlywiki/vanilla/options/sidebarlayout</li>
@@ -671,13 +675,13 @@ Error message and password prompt
 
 <li>Bob Dylan - Rough and Rowdy Ways</li>
 
+<li>Claim train tickets</li>
+
 <li>Completed</li>
 
 <li>Doves - Carousels</li>
 
 <li>From collector to creator</li>
-
-<li>Take train tickets</li>
 
 <li>TiddlyBlink</li>
 
@@ -12651,7 +12655,7 @@ html body.tc-body {
 <div created="20200618032706502" creator="ㄎ" modified="20200618032708843" modifier="debb" title="$:/status/UserName">
 <pre>debby</pre>
 </div>
-<div created="20200728033232714" creator="debby" list="Completed" modified="20200728033232714" modifier="debby" title="$:/StoryList">
+<div created="20200728073933735" creator="debby" list="$:/core/ui/SideBar/Recent [[Claim train tickets]]" modified="20200728073937363" modifier="debby" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200127163609843" list="$:/jd/fullscreen-editor/EditButton $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200304200339220" tags="tb" title="$:/tags/EditToolbar">
@@ -12727,7 +12731,7 @@ html body.tc-body {
     }
 }</pre>
 </div>
-<div created="20200618015454770" creator="debby" modified="20200728035642240" modifier="debby" title="$:/temp/NewTagName">
+<div created="20200618015454770" creator="debby" modified="20200728035718707" modifier="debby" title="$:/temp/NewTagName">
 <pre></pre>
 </div>
 <div author="Paco Rivière" core-version="&gt;=5.0.0" created="20200618014535688" dependents="" description="Catalan (Spain)" icon="data:image/svg+xml,%3C%3Fxml%20version%3D%221.0%22%20encoding%3D%22UTF-8%22%3F%3E%0A%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22810%22%20height%3D%22540%22%3E%0A%3Crect%20width%3D%22810%22%20height%3D%22540%22%20fill%3D%22%23FCDD09%22%2F%3E%0A%3Cpath%20stroke%3D%22%23DA121A%22%20stroke-width%3D%2260%22%20d%3D%22M0%2C90H810m0%2C120H0m0%2C120H810m0%2C120H0%22%2F%3E%0A%3C%2Fsvg%3E" modified="20200618014535688" name="ca-ES" original-plugin-type="language" original-tags="" original-title="$:/languages/ca-ES" original-type="application/json" requires-reload="no" server-url="https://tiddlywiki.com/library/v5.1.22/index.html" tags="$:/tags/RemoteAssetInfo" title="$:/temp/RemoteAssetInfo/https://tiddlywiki.com/library/v5.1.22/index.html/$:/languages/ca-ES" type="text/vnd.tiddlywiki" version="5.1.22">
@@ -13686,8 +13690,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200618015712003" modified="20200618015712003" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
 </div>
-<div created="20200618014049220" creator="debby" modified="20200728033112540" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
-<pre>welcome.md</pre>
+<div created="20200618014049220" creator="debby" modified="20200728073111636" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
+<pre>From collector to creator</pre>
 </div>
 <div created="20200722081145041" creator="debby" modified="20200722081149777" modifier="debby" title="$:/temp/tobibeer/preview-2-tiddler">
 <pre>李元佳</pre>
@@ -14055,6 +14059,12 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
     }
 }</pre>
 </div>
+<div created="20200728073052858" creator="debby" modified="20200728073055622" modifier="debby" title="$:/themes/tiddlywiki/vanilla/metrics/bodyfontsize">
+<pre>15px</pre>
+</div>
+<div created="20200728073052858" creator="debby" modified="20200728073055622" modifier="debby" title="$:/themes/tiddlywiki/vanilla/metrics/bodylineheight">
+<pre>1.25</pre>
+</div>
 <div created="20200722133925589" creator="debby" modified="20200722133925589" modifier="debby" title="$:/themes/tiddlywiki/vanilla/metrics/fontsize">
 <pre>15px</pre>
 </div>
@@ -14085,6 +14095,9 @@ Due to the coronavirus pandemic, I've been stuck at the WFH situation. I could r
 <div created="20200618131628910" creator="debby" modified="20200618132034647" modifier="debby" tags="[[Classic rock]]" title="Bob Dylan - Rough and Rowdy Ways">
 <pre>Bob Dylan’s albums has not intrigued me for a long time. Perhaps they never did because I don’t like how his work is overhyped here in Taiwan. However, this [[review|https://www.thelineofbestfit.com/reviews/albums/bob-dylan-remains-an-immeasurable-and-inimitable-force]] from //The Line of Best Fit// is very interesting. I also like the song titles a lot. Maybe I’ll give it a try when it’s available on Spotify.</pre>
 </div>
+<div created="20200728035324301" creator="debby" modified="20200728073949480" modifier="debby" tags="task" title="Claim train tickets">
+<pre></pre>
+</div>
 <div created="20200728035611844" creator="debby" modified="20200728035650029" modifier="debby" tags="Tasks" title="Completed">
 <pre>&lt;$list filter=&quot;[!has[draft.of]tag[done]sort[created]]&quot;&gt;
 &lt;$checkbox tag=&quot;done&quot;&gt;
@@ -14106,9 +14119,6 @@ Due to the coronavirus pandemic, I've been stuck at the WFH situation. I could r
 - **Create.** Write original article.
 
 — via [From collector to creator • Mental Nodes](https://www.mentalnodes.com/from-collector-to-creator) </pre>
-</div>
-<div created="20200728035324301" creator="debby" modified="20200728035608240" modifier="debby" tags="task done" title="Take train tickets">
-<pre></pre>
 </div>
 <div created="20200125152105770" modified="20200304194714120" tags=".sidebyside tb meta" title="TiddlyBlink">
 <pre>Welcome to TiddlyBlink! ~TiddlyBlink is an adaptation of TiddlyWiki with the goal of helping you see connections between your ideas, and move quickly from one idea to another. It was inspired by the bi-directional linking found in Roam (https://roamresearch.com/), but built with capabilities already available in ~TiddlyWiki (https://tiddlywiki.com). See my example file [ext[here|https://giffmex.org/gifts/tiddlyblinkexample.html]].&lt;br&gt;&lt;br&gt;
@@ -14132,7 +14142,7 @@ Below each tiddler (note card) is a list of links to any other tiddlers that lin
 <div created="20200128030902225" creator="debby" modified="20200618093204659" modifier="debby" tags="tb meta" title="TiddlyBlink home">
 <pre>&lt;&lt;tabs &quot;TiddlyBlink .topicList .sourcesList .hideList&quot; &quot;TiddlyBlink&quot; &gt;&gt;</pre>
 </div>
-<div created="20200728035407300" creator="debby" modified="20200728035543467" modifier="debby" tags="" title="ToDo">
+<div created="20200728035407300" creator="debby" modified="20200728035724985" modifier="debby" tags="Tasks" title="ToDo">
 <pre>&lt;$list filter=&quot;[!has[draft.of]tag[task]!tag[done]sort[created]]&quot;&gt;
 &lt;$checkbox tag=&quot;done&quot;&gt;
  &lt;$link to={{!!title}}&gt;
