Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -10612,7 +10612,7 @@ placeholder=&quot;$placeholder$&quot;/&gt;
 <pre>[[Welcome!]]
 </pre>
 </div>
-<div created="20200304200133691" list="$:/jd/fullscreen-editor/EditButton $:/.giffmex/ViewToolbar/new-note-here-datetime $:/.giffmex/ViewTemplate/refscontext TiddlyBlink" modified="20200304200135317" tags="tb" title="$:/fullscreen-editor">
+<div created="20200304200133691" list="Welcome! $:/jd/fullscreen-editor/EditButton $:/.giffmex/ViewToolbar/new-note-here-datetime $:/.giffmex/ViewTemplate/refscontext TiddlyBlink" modified="20200304200135317" tags="tb" title="$:/fullscreen-editor">
 <pre></pre>
 </div>
 <div created="20200618012714902" modified="20200618013205499" title="$:/GitHub/Branch">
@@ -12655,7 +12655,7 @@ html body.tc-body {
 <div created="20200618032706502" creator="ㄎ" modified="20200618032708843" modifier="debb" title="$:/status/UserName">
 <pre>debby</pre>
 </div>
-<div created="20200728073933735" creator="debby" list="$:/core/ui/SideBar/Recent [[Claim train tickets]]" modified="20200728073937363" modifier="debby" title="$:/StoryList">
+<div list="" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200127163609843" list="$:/jd/fullscreen-editor/EditButton $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200304200339220" tags="tb" title="$:/tags/EditToolbar">
@@ -13690,8 +13690,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200618015712003" modified="20200618015712003" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
 </div>
-<div created="20200618014049220" creator="debby" modified="20200728073111636" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
-<pre>From collector to creator</pre>
+<div created="20200618014049220" creator="debby" modified="20200728074006717" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
+<pre>TiddlyBlink home</pre>
 </div>
 <div created="20200722081145041" creator="debby" modified="20200722081149777" modifier="debby" title="$:/temp/tobibeer/preview-2-tiddler">
 <pre>李元佳</pre>
