--- a/index.html
+++ b/index.html
@@ -675,6 +675,8 @@ Error message and password prompt
 
 <li>Bob Dylan - Rough and Rowdy Ways</li>
 
+<li>Check if file/directory exists in Python</li>
+
 <li>Claim train tickets</li>
 
 <li>Completed</li>
@@ -12655,7 +12657,7 @@ html body.tc-body {
 <div created="20200618032706502" creator="ㄎ" modified="20200618032708843" modifier="debb" title="$:/status/UserName">
 <pre>debby</pre>
 </div>
-<div list="" title="$:/StoryList">
+<div list="[[Check if file/directory exists in Python]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200127163609843" list="$:/jd/fullscreen-editor/EditButton $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200304200339220" tags="tb" title="$:/tags/EditToolbar">
@@ -12731,7 +12733,7 @@ html body.tc-body {
     }
 }</pre>
 </div>
-<div created="20200618015454770" creator="debby" modified="20200728035718707" modifier="debby" title="$:/temp/NewTagName">
+<div created="20200618015454770" creator="debby" modified="20200728100145699" modifier="debby" title="$:/temp/NewTagName">
 <pre></pre>
 </div>
 <div author="Paco Rivière" core-version="&gt;=5.0.0" created="20200618014535688" dependents="" description="Catalan (Spain)" icon="data:image/svg+xml,%3C%3Fxml%20version%3D%221.0%22%20encoding%3D%22UTF-8%22%3F%3E%0A%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22810%22%20height%3D%22540%22%3E%0A%3Crect%20width%3D%22810%22%20height%3D%22540%22%20fill%3D%22%23FCDD09%22%2F%3E%0A%3Cpath%20stroke%3D%22%23DA121A%22%20stroke-width%3D%2260%22%20d%3D%22M0%2C90H810m0%2C120H0m0%2C120H810m0%2C120H0%22%2F%3E%0A%3C%2Fsvg%3E" modified="20200618014535688" name="ca-ES" original-plugin-type="language" original-tags="" original-title="$:/languages/ca-ES" original-type="application/json" requires-reload="no" server-url="https://tiddlywiki.com/library/v5.1.22/index.html" tags="$:/tags/RemoteAssetInfo" title="$:/temp/RemoteAssetInfo/https://tiddlywiki.com/library/v5.1.22/index.html/$:/languages/ca-ES" type="text/vnd.tiddlywiki" version="5.1.22">
@@ -14094,6 +14096,17 @@ Due to the coronavirus pandemic, I've been stuck at the WFH situation. I could r
 </div>
 <div created="20200618131628910" creator="debby" modified="20200618132034647" modifier="debby" tags="[[Classic rock]]" title="Bob Dylan - Rough and Rowdy Ways">
 <pre>Bob Dylan’s albums has not intrigued me for a long time. Perhaps they never did because I don’t like how his work is overhyped here in Taiwan. However, this [[review|https://www.thelineofbestfit.com/reviews/albums/bob-dylan-remains-an-immeasurable-and-inimitable-force]] from //The Line of Best Fit// is very interesting. I also like the song titles a lot. Maybe I’ll give it a try when it’s available on Spotify.</pre>
+</div>
+<div created="20200728100034197" creator="debby" modified="20200728100150579" modifier="debby" tags="Python" title="Check if file/directory exists in Python" type="text/x-markdown">
+<pre>```python
+import os.path 
+   if os.path.isfile('filename.txt'): 
+      print (&quot;File exist&quot;) 
+   else: 
+      print (&quot;File not exist&quot;)
+```
+
+Source: [How to Check if a File or Directory Exists in Python](https://linuxize.com/post/python-check-if-file-exists/) by @linuxize</pre>
 </div>
 <div created="20200728035324301" creator="debby" modified="20200728073949480" modifier="debby" tags="task" title="Claim train tickets">
 <pre></pre>
