--- a/index.html
+++ b/index.html
@@ -12657,7 +12657,7 @@ html body.tc-body {
 <div created="20200618032706502" creator="ㄎ" modified="20200618032708843" modifier="debb" title="$:/status/UserName">
 <pre>debby</pre>
 </div>
-<div list="[[Check if file/directory exists in Python]]" title="$:/StoryList">
+<div list="Welcome!" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200127163609843" list="$:/jd/fullscreen-editor/EditButton $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200304200339220" tags="tb" title="$:/tags/EditToolbar">
@@ -14097,10 +14097,10 @@ Due to the coronavirus pandemic, I've been stuck at the WFH situation. I could r
 <div created="20200618131628910" creator="debby" modified="20200618132034647" modifier="debby" tags="[[Classic rock]]" title="Bob Dylan - Rough and Rowdy Ways">
 <pre>Bob Dylan’s albums has not intrigued me for a long time. Perhaps they never did because I don’t like how his work is overhyped here in Taiwan. However, this [[review|https://www.thelineofbestfit.com/reviews/albums/bob-dylan-remains-an-immeasurable-and-inimitable-force]] from //The Line of Best Fit// is very interesting. I also like the song titles a lot. Maybe I’ll give it a try when it’s available on Spotify.</pre>
 </div>
-<div created="20200728100034197" creator="debby" modified="20200728100320684" modifier="debby" tags="Python" title="Check if file/directory exists in Python" type="text/x-markdown">
-<pre>- `os.path.exists(path)` - Returns true if the path is a file, directory, or a valid symlink.
-- `os.path.isfile(path)` - Returns true if the path is a regular file or a symlink to a file.
-- `os.path.isdir(path)` - Returns true if the path is a directory or a symlink to a directory.
+<div created="20200728100034197" creator="debby" modified="20200728100339902" modifier="debby" tags="Python" title="Check if file/directory exists in Python" type="text/x-markdown">
+<pre>* `os.path.exists(path)` - Returns true if the path is a file, directory, or a valid symlink.
+* `os.path.isfile(path)` - Returns true if the path is a regular file or a symlink to a file.
+* `os.path.isdir(path)` - Returns true if the path is a directory or a symlink to a directory.
 
 
 ```python
