Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -671,8 +671,6 @@ Error message and password prompt
 
 <li>2020-06-18</li>
 
-<li>2020-07-22</li>
-
 <li>Bob Dylan - Rough and Rowdy Ways</li>
 
 <li>Check if file/directory exists in Python</li>
@@ -12657,7 +12655,7 @@ html body.tc-body {
 <div created="20200618032706502" creator="ㄎ" modified="20200618032708843" modifier="debb" title="$:/status/UserName">
 <pre>debby</pre>
 </div>
-<div list="Welcome!" title="$:/StoryList">
+<div created="20200923014417683" creator="debby" list="$:/core/ui/MoreSideBar/All" modified="20200923014419679" modifier="debby" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200127163609843" list="$:/jd/fullscreen-editor/EditButton $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200304200339220" tags="tb" title="$:/tags/EditToolbar">
@@ -13692,8 +13690,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200618015712003" modified="20200618015712003" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
 </div>
-<div created="20200618014049220" creator="debby" modified="20200728074006717" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
-<pre>TiddlyBlink home</pre>
+<div created="20200618014049220" creator="debby" modified="20200923014420075" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
+<pre>2020-07-22</pre>
 </div>
 <div created="20200722081145041" creator="debby" modified="20200722081149777" modifier="debby" title="$:/temp/tobibeer/preview-2-tiddler">
 <pre>李元佳</pre>
@@ -14086,13 +14084,6 @@ Saving with GitHub is iffy, and sometimes this site/page renders strangely. Most
 Since what I'm writing here is technically public, I need to write in general terms instead of referring to specific examples. This will be challenging.
 
 In order to follow the principle of never creating notes in isolation, here's a link to [[From collector to creator]]. </pre>
-</div>
-<div created="20200722093631618" creator="debby" modified="20200722134420602" modifier="debby" tags="Journal" title="2020-07-22">
-<pre>After giving up TiddkyWiki for a while, I'm back again. Once the page has been set up, it seems relatively easy to update this site.
-
-I'm still getting used to the idea of hosting a public site of personal notes. Writing for a public audience doesn't come to me naturally, and I'm not someone who can easily go into confessional mode or can offer lots of insight for people who listen to me speak.
-
-Due to the coronavirus pandemic, I've been stuck at the WFH situation. I could really use this space to practice my writing and speaking skills even though I'm certain no one visits here except myself.</pre>
 </div>
 <div created="20200618131628910" creator="debby" modified="20200618132034647" modifier="debby" tags="[[Classic rock]]" title="Bob Dylan - Rough and Rowdy Ways">
 <pre>Bob Dylan’s albums has not intrigued me for a long time. Perhaps they never did because I don’t like how his work is overhyped here in Taiwan. However, this [[review|https://www.thelineofbestfit.com/reviews/albums/bob-dylan-remains-an-immeasurable-and-inimitable-force]] from //The Line of Best Fit// is very interesting. I also like the song titles a lot. Maybe I’ll give it a try when it’s available on Spotify.</pre>
