--- a/index.html
+++ b/index.html
@@ -385,11 +385,17 @@ Error message and password prompt
 
 <li>$:/state/plugin-info--270617185-$:/themes/tiddlywiki/vanilla</li>
 
+<li>$:/state/plugin-info--896887961-$:/plugins/rmnvsl/krystal</li>
+
+<li>$:/state/plugin-info--896887961-$:/plugins/rmnvsl/krystal--627067479</li>
+
 <li>$:/state/plugin-info--896887961-$:/plugins/tiddlywiki/highlight</li>
 
 <li>$:/state/plugin-info--896887961-$:/plugins/tiddlywiki/markdown</li>
 
 <li>$:/state/plugin-info--896887961-$:/plugins/tiddlywiki/markdown---1750897968</li>
+
+<li>$:/state/plugin-info--896887961-$:/plugins/tobibeer/appear</li>
 
 <li>$:/state/plugin-info-896098052-$:/plugins/tiddlywiki/markdown</li>
 
@@ -11952,7 +11958,7 @@ exports.context = contextWidget;
     }
 }</pre>
 </div>
-<div created="20200722080339252" creator="debby" modified="20200728015720544" modifier="debby" title="$:/plugins/rmnvsl/krystal/config/close">
+<div created="20200722080339252" creator="debby" modified="20200923015216173" modifier="debby" title="$:/plugins/rmnvsl/krystal/config/close">
 <pre>disable</pre>
 </div>
 <div created="20200722080340752" creator="debby" modified="20200722080340752" modifier="debby" title="$:/plugins/rmnvsl/krystal/config/highlight">
@@ -12588,14 +12594,20 @@ html body.tc-body {
 <div created="20200527084422330" modified="20200527084422330" title="$:/state/plugin-info--2135486722-$:/plugins/tobibeer/preview---1090399154">
 <pre>config</pre>
 </div>
-<div created="20200728015904036" creator="debby" modified="20200728015904036" modifier="debby" title="$:/state/plugin-info--270617185-$:/themes/jd/Mono">
-<pre>yes</pre>
+<div created="20200728015904036" creator="debby" modified="20200923015050847" modifier="debby" title="$:/state/plugin-info--270617185-$:/themes/jd/Mono">
+<pre>no</pre>
 </div>
-<div created="20200722092008809" creator="debby" modified="20200728022011520" modifier="debby" title="$:/state/plugin-info--270617185-$:/themes/tiddlywiki/snowwhite">
-<pre>yes</pre>
+<div created="20200722092008809" creator="debby" modified="20200923015052700" modifier="debby" title="$:/state/plugin-info--270617185-$:/themes/tiddlywiki/snowwhite">
+<pre>no</pre>
 </div>
-<div created="20200722092012898" creator="debby" modified="20200728022019670" modifier="debby" title="$:/state/plugin-info--270617185-$:/themes/tiddlywiki/vanilla">
-<pre>yes</pre>
+<div created="20200722092012898" creator="debby" modified="20200923015054004" modifier="debby" title="$:/state/plugin-info--270617185-$:/themes/tiddlywiki/vanilla">
+<pre>no</pre>
+</div>
+<div created="20200923015122032" creator="debby" modified="20200923015219788" modifier="debby" title="$:/state/plugin-info--896887961-$:/plugins/rmnvsl/krystal">
+<pre>no</pre>
+</div>
+<div created="20200923015124708" creator="debby" modified="20200923015218620" modifier="debby" title="$:/state/plugin-info--896887961-$:/plugins/rmnvsl/krystal--627067479">
+<pre>readme</pre>
 </div>
 <div created="20200722091945875" creator="debby" modified="20200722092000843" modifier="debby" title="$:/state/plugin-info--896887961-$:/plugins/tiddlywiki/highlight">
 <pre>no</pre>
@@ -12605,6 +12617,9 @@ html body.tc-body {
 </div>
 <div created="20200722091858275" creator="debby" modified="20200722091941250" modifier="debby" title="$:/state/plugin-info--896887961-$:/plugins/tiddlywiki/markdown---1750897968">
 <pre>readme</pre>
+</div>
+<div created="20200923015109539" creator="debby" modified="20200923015118092" modifier="debby" title="$:/state/plugin-info--896887961-$:/plugins/tobibeer/appear">
+<pre>no</pre>
 </div>
 <div created="20200619015624004" creator="debby" modified="20200619015631603" modifier="debby" title="$:/state/plugin-info-896098052-$:/plugins/tiddlywiki/markdown">
 <pre>yes</pre>
@@ -12630,17 +12645,17 @@ html body.tc-body {
 <div created="20200527074355500" creator="debby" modified="20200728023101781" modifier="debby" title="$:/state/tab--2112689675">
 <pre>$:/core/ui/ControlPanel/Basics</pre>
 </div>
-<div created="20200618015239429" creator="debby" modified="20200728020302176" modifier="debby" title="$:/state/tab--86143343">
-<pre>$:/core/ui/ControlPanel/Plugins/Installed/Themes</pre>
+<div created="20200618015239429" creator="debby" modified="20200923015057756" modifier="debby" title="$:/state/tab--86143343">
+<pre>$:/core/ui/ControlPanel/Plugins/Installed/Plugins</pre>
 </div>
 <div created="20200527074400500" creator="debby" modified="20200728023100133" modifier="debby" title="$:/state/tab--959111941">
 <pre>$:/core/ui/ControlPanel/EditorTypes</pre>
 </div>
-<div created="20200527074318200" creator="debby" modified="20200923014745720" modifier="debby" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Settings</pre>
+<div created="20200527074318200" creator="debby" modified="20200923015038027" modifier="debby" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Plugins</pre>
 </div>
-<div created="20200618012538037" creator="debby" modified="20200722134041093" modifier="debby" title="$:/state/tab-2065006209">
-<pre>$:/core/ui/ControlPanel/Saving/General</pre>
+<div created="20200618012538037" creator="debby" modified="20200923015017583" modifier="debby" title="$:/state/tab-2065006209">
+<pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
 <div created="20200728021958780" creator="debby" modified="20200728022944081" modifier="debby" title="$:/state/tab-738187504">
 <pre>$:/themes/jd/Mono/Config/TopbarButtons</pre>
@@ -13692,8 +13707,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200618015712003" modified="20200618015712003" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
 </div>
-<div created="20200618014049220" creator="debby" modified="20200728074006717" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
-<pre>TiddlyBlink home</pre>
+<div created="20200618014049220" creator="debby" modified="20200923015418901" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
+<pre>.hideList</pre>
 </div>
 <div created="20200722081145041" creator="debby" modified="20200722081149777" modifier="debby" title="$:/temp/tobibeer/preview-2-tiddler">
 <pre>李元佳</pre>
