Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -691,6 +691,8 @@ Error message and password prompt
 
 <li>From collector to creator</li>
 
+<li>New Tiddler</li>
+
 <li>TiddlyBlink</li>
 
 <li>TiddlyBlink home</li>
@@ -12675,7 +12677,7 @@ html body.tc-body {
 <div created="20200618032706502" creator="ㄎ" modified="20200618032708843" modifier="debb" title="$:/status/UserName">
 <pre>debby</pre>
 </div>
-<div created="20200923033158866" creator="debby" list="$:/core/ui/SideBar/Recent Welcome! [[From collector to creator]]" modified="20200923033210166" modifier="debby" title="$:/StoryList">
+<div list="Welcome! [[New Tiddler]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200127163609843" list="$:/jd/fullscreen-editor/EditButton $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200304200339220" tags="tb" title="$:/tags/EditToolbar">
@@ -13710,8 +13712,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200618015712003" modified="20200618015712003" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
 </div>
-<div created="20200618014049220" creator="debby" modified="20200923033210638" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
-<pre>2020-07-22</pre>
+<div created="20200618014049220" creator="debby" modified="20200924024924068" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
+<pre>.topicList</pre>
 </div>
 <div created="20200722081145041" creator="debby" modified="20200722081149777" modifier="debby" title="$:/temp/tobibeer/preview-2-tiddler">
 <pre>李元佳</pre>
@@ -14148,6 +14150,9 @@ Source: [How to Check if a File or Directory Exists in Python](https://linuxize.
 - **Create.** Write original article.
 
 — via [From collector to creator • Mental Nodes](https://www.mentalnodes.com/from-collector-to-creator) </pre>
+</div>
+<div created="20200924030139207" creator="debby" modified="20200924030152987" modifier="debby" tags="" title="New Tiddler">
+<pre>[[Welcome!]]</pre>
 </div>
 <div created="20200125152105770" modified="20200304194714120" tags=".sidebyside tb meta" title="TiddlyBlink">
 <pre>Welcome to TiddlyBlink! ~TiddlyBlink is an adaptation of TiddlyWiki with the goal of helping you see connections between your ideas, and move quickly from one idea to another. It was inspired by the bi-directional linking found in Roam (https://roamresearch.com/), but built with capabilities already available in ~TiddlyWiki (https://tiddlywiki.com). See my example file [ext[here|https://giffmex.org/gifts/tiddlyblinkexample.html]].&lt;br&gt;&lt;br&gt;
